# seismic_segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  run_train.sh
conf/: config.yaml
conf/experiments/: exp1.yaml  exp2.yaml
experiments/: .env.example  prepare_3d_data.py  prepare_data.py  settings.py  train.py  utils.py
notebooks/: _train_sam.ipynb  firsrt_notebook.ipynb  image_3d_try.ipynb  salt_try.ipynb  test_florence.ipynb  test_sam_v2.ipynb  test_train.ipynb
outputs/2025-03-10/07-59-49/.hydra/: config.yaml  hydra.yaml  overrides.yaml
