[project]
name = "rosneft_segmentation"
version = "0.1.0"
description = "Your project description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.4.0",
    "albucore==0.0.23",
    "albumentations==2.0.5",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "asttokens==3.0.0",
    "attrs==25.1.0",
    "black>=25.1.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "clearml==1.17.1",
    "cloudpickle==3.1.1",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "debugpy==1.8.12",
    "decorator==5.2.1",
    "einops==0.8.1",
    "executing==2.2.0",
    "filelock==3.17.0",
    "fonttools==4.56.0",
    "fsspec==2025.2.0",
    "furl==2.1.3",
    "huggingface-hub==0.29.1",
    "hydra-core==1.3.2",
    "idna==3.10",
    "iopath==0.1.10",
    "ipykernel==6.29.5",
    "ipython==8.32.0",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==2.2.3",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "omegaconf==2.3.0",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "orderedmultidict==1.0.1",
    "orjson==3.10.15",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pathlib2==2.3.7.post1",
    "peft==0.14.0",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "portalocker==3.1.1",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pyjwt==2.9.0",
    "pylint>=3.3.5",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "pyzmq==26.2.1",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rpds-py==0.23.1",
    "ruff>=0.11.0",
    "safetensors==0.5.3",
    "scipy==1.15.2",
    "segyio==1.9.13",
    "simsimd==6.2.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "stringzilla==3.12.3",
    "sympy==1.13.1",
    "tensordict==0.6.0",
    "timm==1.0.15",
    "tokenizers==0.21.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchtriton",
    "torchvision==0.21.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.49.0",
    "triton==3.2.0",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
]

[tool.black]
    line-length = 100
